--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'sainnhe/tmux-fzf'
+# set -g @plugin 'tmux-plugins/tmux-sessionist'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.config/tmux/plugins/tpm/tpm'
