--- a/plugin.yml
+++ b/plugin.yml
@@ -1,21 +1,23 @@
 plugin:
-  dp-secrets:
+  view-secret:
     shortCut: Shift-S
     confirm: false
-    description: "Secrets"
+    description: "Secret"
     scopes:
       - deploy
+      - sts
     command: sh
     background: false
     args:
       - -c
       - "kubectl --context $CONTEXT get secrets -n $NAMESPACE $NAME -o json | jq '{name: .metadata.name,data: .data|map_values(@base64d)}' | view -"
-  dp-config:
+  view-configmap:
     shortCut: Shift-C
     confirm: false
     description: "ConfigMap"
     scopes:
       - deploy
+      - sts
     command: sh
     background: false
     args:
