set bash as default for alacritty

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,6 +4,9 @@
 
 # Colors (Gruvbox dark)
 
+[shell]
+program = "/bin/bash"
+
 # Default colors
 [colors.primary]
 # hard contrast background = = '#1d2021'
