--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,6 @@
+
+set-option -g default-command "exec /opt/homebrew/bin/bash -i"
+
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
