--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -93,7 +93,7 @@ set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore] "
-set-option -g status-right "#[bg=colour241,fg=colour248 nobold, nounderscore, noitalics] #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -m 0 -a 0 -g 0 -t 0) "
+set-option -g status-right "#[bg=colour241,fg=colour248 nobold, nounderscore, noitalics] #(tmux-mem-cpu-load -m 0 -a 0 -g 0 -t 0) "
 
 set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
