--- a/.config/k9s/skins/gruvbox.yaml
+++ b/.config/k9s/skins/gruvbox.yaml
@@ -83,6 +83,7 @@ k9s:
     table:
       fgColor: *foreground
       bgColor: *background
+      cursorFgColor: *background
       # Header row styles.
       header:
         fgColor: *foreground
