tmux claude hotkey bing <L>:C

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,6 +25,8 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+bind-key C split-window -h -p 37 -c "#{pane_current_path}" "claude"
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 
